--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
       <div class="item-1">
         <p onclick="getName(1)">BAZA 1</p>
         <p onclick="getName(2)">BAZA 2</p>
+        <p onclick="getName(3)">BAZA 3</p>
       </div>
-      <iframe src="baza1.pdf" frameborder="0" scrolling="auto" id="pdf"></iframe>
+      <iframe src="baza3.pdf" frameborder="0" scrolling="auto" id="pdf"></iframe>
     </div>
   </body>
 </html>
