--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <div class="box">
       <div class="item-1">
         <p onclick="getName(1)">BAZA 1</p>
+        <p onclick="getName(3)">BAZA 2</p>
         <p onclick="getName(2)">KITOB</p>
       </div>
       <iframe src="baza1.pdf" frameborder="0" scrolling="auto" id="pdf"></iframe>
