--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <div class="item-1">
         <p onclick="getName(1)">BAZA 1</p>
         <p onclick="getName(3)">BAZA 2</p>
+        <p onclick="getName(4)">Sxemalar</p>
         <p onclick="getName(2)">KITOB</p>
       </div>
       <iframe src="baza1.pdf" frameborder="0" scrolling="auto" id="pdf"></iframe>
