--- a/index.html
+++ b/index.html
@@ -35,10 +35,8 @@
   <body>
     <div class="box">
       <div class="item-1">
-        <p onclick="getName(1)">BAZA 1</p>
-        <p onclick="getName(3)">BAZA 2</p>
-        <p onclick="getName(4)">Sxemalar</p>
-        <p onclick="getName(2)">KITOB</p>
+        <p onclick="getName(1)">KKT</p>
+        <p onclick="getName(2)">DDL</p>
       </div>
       <iframe src="baza1.pdf" frameborder="0" scrolling="auto" id="pdf"></iframe>
     </div>
