--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <body>
     <div class="box">
       <div class="item-1">
-        <p onclick="getName(1)">KKT</p>
-        <p onclick="getName(2)">DDL</p>
+        <p onclick="getName(1)">BAZA1</p>
+        <p onclick="getName(2)">BAZA2</p>
       </div>
       <iframe src="baza1.pdf" frameborder="0" scrolling="auto" id="pdf"></iframe>
     </div>
