--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
       <div class="item-1">
         <p onclick="getName(1)">BAZA1</p>
         <p onclick="getName(2)">BAZA2</p>
+        <p onclick="getName(3)">BAZA3</p>
       </div>
       <iframe src="baza1.pdf" frameborder="0" scrolling="auto" id="pdf"></iframe>
     </div>
